--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.5.3",
     "@types/node": "^20.4.10",
+    "eslint-config-standard-with-typescript": "^37.0.0",
     "git-commit-msg-linter": "^5.0.4",
     "typescript": "^5.1.6"
   }
