--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +15,9 @@
     "eslint-config-standard-with-typescript": "^37.0.0",
     "git-commit-msg-linter": "^5.0.4",
     "husky": "^8.0.3",
+    "jest": "^29.6.2",
     "lint-staged": "^13.2.3",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.1.6"
   }
 }
