--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.3",
     "@types/node": "^20.4.10",
+    "@types/validator": "^13.11.1",
     "eslint-config-standard-with-typescript": "^37.0.0",
     "git-commit-msg-linter": "^5.0.4",
     "husky": "^8.0.3",
@@ -25,5 +26,8 @@
     "lint-staged": "^13.2.3",
     "ts-jest": "^29.1.1",
     "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "validator": "^13.11.0"
   }
 }
