--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@shelf/jest-mongodb": "^4.1.7",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.5.3",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^20.4.10",
     "@types/validator": "^13.11.1",
     "eslint-config-standard-with-typescript": "^37.0.0",
@@ -30,6 +32,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "mongodb": "^6.0.0",
     "validator": "^13.11.0"
   }
 }
